# creo_manager

./: .gitignore  README.md  start.sh  start_backend.sh  start_frontend.sh
.cursor/rules/: frontend.mdc  python-fastapi.mdc
Project description/: db_structure.md  project_description.md  ui_style.md
Tasks/: inteagrations.md  youtube_upload.md
backend/: CREATE_ENV.md  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: integrations.py  uploads.py
backend/app/api/v1/schemas/: __init__.py  integration.py  upload.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  ads_video_link.py  integration.py  moderation_check.py  notification.py  source_asset.py  user.py  video_version.py  youtube_upload.py
backend/app/services/: encryption.py  google_ads_service.py  google_drive_service.py  integration_service.py  telegram_service.py  upload_service.py  video_processor.py  youtube_service.py
backend/scripts/: check_db.py  check_env.py
docs/: SCRIPTS.md  asyncpg-supabase-fix.md  quick-start.md  setup.md  supabase-setup.md  troubleshooting.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/integrations/: page.tsx
frontend/components/integrations/: integration-card.tsx  integrations-page.tsx
frontend/components/layout/: navbar.tsx
frontend/components/upload/: upload-page.tsx  upload-zone.tsx  (+1 more)
frontend/lib/: api-integrations.ts  api.ts
